# ydl-rs

./: CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  Makefile  README.md  README_zh.md  _typos.toml  deny.toml
examples/: basic_download.rs
specs/: 0001-spec.md
ydl/: Cargo.toml
ydl-cli/: Cargo.toml
ydl-cli/src/: blog_generator.rs  blogger.md  main.rs
ydl/src/: error.rs  extractor.rs  lib.rs  parser.rs  processor.rs  types.rs  youtube_client.rs
