[workspace]
members = ["ydl", "ydl-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/tyrchen/ydl-rs"
homepage = "https://github.com/tyrchen/ydl-rs"

[workspace.dependencies]
# HTTP Client and Async Runtime
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }

# CLI and Configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# URL Processing and Validation
url = "2.5"
regex = "1.11"

# File I/O and Encoding
encoding_rs = "0.8"
tempfile = "3.21"

# Error Handling and Logging
anyhow = "1.0.99"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAI Integration
async-openai = "0.29"
